Add OPUS project to portfolio

--- a/_includes/features1.html
+++ b/_includes/features1.html
@@ -1,5 +1,11 @@
 <div class="features">
     {% include feature.html
+      path="/projects/opus" 
+      title="OPUS" 
+      desc="Tech-powered tuition. (NextJS, NodeJS, PostgreSQL)" 
+      img="projects/opus/thumb.jpg" 
+    %}
+    {% include feature.html
       path="/projects/chapter-and-club" 
       title="Chapter & Club" 
       desc="Building a social network for writers. (NextJS + NodeJS)" 
@@ -16,12 +22,6 @@
       title="DocForge" 
       desc="Building a tool to simplify, incentivize, and transform documentation. (React + NodeJS)"
       img="projects/docforge/thumb.png" 
-    %}
-    {% include feature.html
-      path="/projects/silentacution" 
-      title="Silent Auction" 
-      desc="Building a web-based silent auction. (React + NodeJS)"
-      img="projects/silent-auction/thumb.png" 
     %}
     {% include feature.html
       path="/projects/fhs" 
