--- a/_includes/features2.html
+++ b/_includes/features2.html
@@ -1,5 +1,11 @@
 <div class="features">
     {% include feature.html
+      path="/projects/silentauction" 
+      title="Silent Auction" 
+      desc="Building a web-based silent auction. (React + NodeJS)"
+      img="projects/silent-auction/thumb.png" 
+    %}
+    {% include feature.html
       path="/projects/ogb" 
       title="Operation Give Back" 
       desc="Developing a student volunteer match site. (Ruby on Rails)" 
